--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -28,7 +28,7 @@
         "folder_configuration_error": "Error while connecting shared folder",
         "disconnect_share": "Disconnect share",
         "fix_permissions": "Fix permissions",
-        "fix_setup_permissions": "This function will fix setup files permissions to execute them properly on clients. Folder Agg/Setup must exists",
+        "fix_setup_permissions": "This function will fix setup and updates files permissions to execute them properly on clients. Folder Agg must exists",
         "fix_permissions_success": "Permissions fixed successfully",
         "fix_permissions_error": "Error while fixing permissions"
     },
